tests/invalid_typecheck/test_tc_duplicate_proc.aphi
/*
Type-check error: Redefinition of identifier (duplicate procedure name).
Two procedures share the same name 'main'.
*/

procedure main {
}

procedure main {
}
